| Summary: | ASTERISK-26349: 13.11.1 res_pjsip/pjsip_distributor.c: Request 'REGISTER' failed | ||
| Reporter: | Dmitry Melekhov (slesru) | Labels: | |
| Date Opened: | 2016-09-09 05:14:24 | Date Closed: | 2016-09-09 11:09:57 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | pjproject/pjsip |
| Versions: | 13.11.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Centos 6 32bit | Attachments: | ( 0) debug_log_26349 |
| Description: | Upgraded 13.10 to 13.11.1 today and now I see messages in log:
[Sep 9 12:23:16] NOTICE[6064] res_pjsip/pjsip_distributor.c: Request 'REGISTER' from '"3563" <sip:3563@192.168.32.254>' failed for '192.168.32.116:5060' (callid: 0_1409534529@192.168.32.116) - No matching endpoint found or [Sep 9 12:56:14] NOTICE[10163] res_pjsip/pjsip_distributor.c: Request 'INVITE' from '"3567" <sip:3567@192.168.32.254>' failed for '192.168.32.108:5060' (callid: 0_2410349837@192.168.32.108) - No matching endpoint found Looks like this is harmless, because there no complains from users, and these endpoints are registered, can place calls and be called. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-09 05:14:25.237-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-09-09 05:16:41.511-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. Please read over the Asterisk Issue Guidelines [1] which discusses the information necessary for your issue to be resolved and the format that information needs to be in. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. The specific steps or actions you took that caused you to encounter the problem. 2. The behavior you expected and the location of documentation that led you to that expectation. 3. The behavior you actually encountered. To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. If applicable, please ensure that protocol-level trace debugging is enabled, e.g., 'sip set debug on' if the issue involves chan_sip, and configuration information such as dialplan and channel configuration. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines [2] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Dmitry Melekhov (slesru) 2016-09-09 05:21:20.767-0500 1. The specific steps or actions you took that caused you to encounter the problem. Upgraded 13.10 to 13.11.1 today 2. The behavior you expected and the location of documentation that led you to that expectation. I expect no such messages, there is no info about such messages in documentations. 3. The behavior you actually encountered. [Sep 9 12:23:16] NOTICE[6064] res_pjsip/pjsip_distributor.c: Request 'REGISTER' from '"3563" <sip:3563@192.168.32.254>' failed for '192.168.32.116:5060' (callid: 0_1409534529@192.168.32.116) - No matching endpoint found or [Sep 9 12:56:14] NOTICE[10163] res_pjsip/pjsip_distributor.c: Request 'INVITE' from '"3567" <sip:3567@192.168.32.254>' failed for '192.168.32.108:5060' (callid: 0_2410349837@192.168.32.108) - No matching endpoint found To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. Once it will be ready, I'll attach them, just several minutes :-) By: Dmitry Melekhov (slesru) 2016-09-09 05:35:15.720-0500 debug log. sorry it contains mane remote connection messages, forget to turn off monitoring... By: Dmitry Melekhov (slesru) 2016-09-09 06:39:02.960-0500 compiled with fix- no these messages now. Thank you! | ||